# TetrisEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DEVREAD.txt  Minjae.txt  README.md  Schema.txt  build.py  setup_venv.py
docs/: architecture.md  configFile.in  html_header.html.in  index.html
include/TetrisEngine/: Board.h  Controls.h  Game.h  Piece.h  Ui.h  UtilFunctions.h
include/appicon/: appicon.rc
python/: requirements.txt
src/: Board.cpp  Controls.cpp  Game.cpp  Piece.cpp  Ui.cpp  UtilFunctions.cpp  main.cpp
tests/: CMakeLists.txt  test_board.cpp
